--- a/application.yaml
+++ b/application.yaml
@@ -6,3 +6,9 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
