--- a/application.yaml
+++ b/application.yaml
@@ -12,3 +12,8 @@ management:
   tracing:
     sampling:
       probability: 1.0
+
+okta:
+  oauth2:
+    issuer: https://dev-77423464.okta.com/oauth2/default
+    audience: api://default
